2011-09-07 0.84 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * More cross-checks for META data

2011-08-07 0.83 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Fix spurious auto_diag warning (RT#69673)
    * Tested with 50 versions of perl, including 1.15.1

2011-05-01 0.82 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Doc fix (RT#66905, Peter Newman)
    * Documentation overhaul (pod links)

2011-03-07 0.81 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Add is_missing ()
    * Doc overhaul
    * Fix Build on OpenVMS (RT#65654, Martin P.J. Zinser)
    * Fix SetDiag () leak (RT#66453, Sven Schöling)

2010-12-24 0.80 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Implement getline_all () and getaline_hr_all ()
    * Fixed another parsing for eol = \r (RT#61525)

2010-11-26 0.79 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Use correct type for STRLEN (HP-UX/PA-RISC/32)
    * More code coverage
    * EOF unreliable when line-end missing at eof

2010-11-26 0.78 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Version 0.77 broke MacOS exported CSV files with only \r

2010-10-23 0.77 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Internals now use warn () instead of (void)fprintf (stderr, ...)
      Now the test in t/80_diag also passes on Windows
    * Better parsing for eol = \r and set as such (RT#61525)
    * Workaround for AIX cpp bug (RT#62388, Jan Dubois)

2010-10-09 0.76 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Windows doesn't support STDERR redirection as used in t/80_diag

2010-10-05 0.75 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Fixed undefinedness of $\ in print (RT#61880)

2010-09-29 0.74 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Spelling fixes
    * Real eol support for parsing streams (beyond \n, \r and \r\n)
    * Clarify doc for always_quote to not quote undef fields
    * Clarify UTF8 process for print () and combine ()

2010-05-03 0.73 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Improve date conversion in examples/csv2xls